--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,21 @@
     font-size: 48px;
     color: rgb(185, 8, 8);
 }
+
+.button-class{
+    background-color: rgb(243, 243, 150);
+    border: none;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    color: black;
+    border: 2px solid rgb(185, 8, 8);
+}
+.button-class:hover{
+    background-color: rgb(221, 221, 90);
+}
