--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
-*{
+html,
+body{
     background-color: rgb(241, 241, 122);
-    margin: 0;
-    text-align: center;
     box-sizing: border-box;
     font-size: 48px;
     color: rgb(185, 8, 8);
@@ -23,4 +22,65 @@
 }
 .button-class:hover{
     background-color: rgb(221, 221, 90);
+}
+.container{
+    text-align: center;
+    align-items: center;
+}
+.modal-container {
+    display: none;
+}
+
+.modal-container.is-visible {
+    position: fixed;
+    padding: 20px;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+
+    /* to show it above other content */
+    z-index: 999;
+
+    /* to allow scrolling if the screen is not high enough*/
+    overflow: auto;
+
+    /* to center the modal */
+    display: grid;
+    text-align: center;
+}
+
+.modal {
+    margin: auto;
+    display: inline-block;
+    box-sizing: border-box;
+    background: rgb(230, 230, 67);
+    padding: 15px;
+    width: 100%;
+    max-width: 600px;
+    text-align: left;
+    border: 12px solid rgb(216, 104, 43);
+}
+
+.modal-close {
+    float: right;
+    -webkit-appearance: none;
+    border: 0;
+    background: none;
+    color: #777;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.modal h1 {
+    margin-top: 0;
+}
+
+.modal p {
+    margin-bottom: 0;
+}
+.img{
+    size: 300px;
 }
