--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,6 @@ body{
     color: rgb(185, 8, 8);
 }
 
-.bg-light{
-    background-color: rgb(236, 77, 77);
-}
 .pokedex{
     padding: 15px;
     display: flex;
@@ -48,29 +45,6 @@ body{
     display: none;
 }
 
-/*
-.modal-container.is-visible {
-    position: fixed;
-    padding: 20px;
-    box-sizing: border-box;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-
-    /to show it above other content 
-    z-index: 999;
-
-    /to allow scrolling if the screen is not high enough
-    overflow: auto;
-
-    /to center the modal 
-    display: grid;
-    text-align: center;
-}
-*/
-
 .modal {
     margin: auto;
     display: inline-block;
@@ -88,7 +62,7 @@ body{
     -webkit-appearance: none;
     border: 0;
     background: none;
-    color: #777;
+    color: rgb(119, 119, 119);
     text-decoration: underline;
     cursor: pointer;
 }
