--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 body{
     background-color: var(--background-color);
     box-sizing: border-box;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
     padding: 0;
     font-size: 28px;
@@ -25,14 +26,17 @@ main{
 }
 .navbar{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 10%;
+    padding: 1rem 1.25rem;
 }
+.navbar-brand {
+    text-transform: uppercase;
+    color: aliceblue;
+    display: inline-block;
+    margin-right: 1rem;
+}
+
 nav{
     background-color: var(--primary-color);
-
-
 }
 .pokedex{
     padding: 15px;
@@ -83,11 +87,14 @@ nav{
     -webkit-appearance: none;
     border: 0;
     background: none;
-    color: rgb(119, 119, 119);
+    color: green;
     text-decoration: underline;
     cursor: pointer;
 }
-
+.btn-secondary {
+    color: white;
+    background-color: green;
+}
 .modal h1 {
     margin-top: 0;
 }
